rearranged files, added user profile, changed user profile fragment

--- a/app/src/main/res/layout/fragment_tweeter_feed.xml
+++ b/app/src/main/res/layout/fragment_tweeter_feed.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:orientation="vertical"
-    tools:context=".TweeterFeedFragment">
+    tools:context=".Model.TweeterFeedFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tweeterFeedRecyclerView"
