--- a/app/src/main/res/layout/fragment_create_tweet.xml
+++ b/app/src/main/res/layout/fragment_create_tweet.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/layout_background"
-    tools:context=".CreateTweetFragment">
+    tools:context=".Model.CreateTweetFragment">
 
     <ImageView
         android:id="@+id/imageView2"
