--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".FollowersFragment">
+    tools:context=".Model.FollowersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/followersRecyclerView"
