--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,6 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/itemProfile"
+            android:title="@string/menu_profile" />
+        <item
             android:id="@+id/itemUsers"
             android:title="@string/menu_users" />
         <item
@@ -13,6 +16,9 @@
         <item
             android:id="@+id/itemFollowers"
             android:title="@string/menu_followers"/>
+        <item
+            android:id="@+id/itemTweetFeed"
+            android:title="@string/menu_tweetFeed"/>
     </group>
 
 </menu>
