--- a/app/src/main/res/layout/tweet_display_layout.xml
+++ b/app/src/main/res/layout/tweet_display_layout.xml
@@ -44,4 +44,66 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageViewReplies"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
+        app:layout_constraintVertical_bias="0.05"
+        app:srcCompat="@drawable/ic_comment" />
+
+    <TextView
+        android:id="@+id/textViewReplyCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/txt_replies"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageViewReplies"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
+        app:layout_constraintVertical_bias="0.07" />
+
+    <ImageView
+        android:id="@+id/imageViewLike"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewShare"
+        app:layout_constraintStart_toEndOf="@+id/imageViewReplies"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
+        app:layout_constraintVertical_bias="0.05"
+        app:srcCompat="@drawable/ic_like" />
+
+    <TextView
+        android:id="@+id/textViewLikeCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/txt_like"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageViewLike"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
+        app:layout_constraintVertical_bias="0.07" />
+
+    <ImageView
+        android:id="@+id/imageViewShare"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
+        app:layout_constraintVertical_bias="0.05"
+        app:srcCompat="@drawable/ic_share" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
