--- a/app/src/main/res/layout/fragment_tweet.xml
+++ b/app/src/main/res/layout/fragment_tweet.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:backgroundTintMode="src_atop"
-    app:cardBackgroundColor="@android:color/transparent"
-    app:contentPadding="10dp"
-    card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="5dp"
-    card_view:cardUseCompatPadding="true">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".Model.TweetFragment" >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/replyTweetContainer"
+        android:id="@+id/tweetContainer"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewReplierUsername"
+            android:id="@+id/textViewTweetUsername"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -45,7 +40,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewReplyTweetContent"
+            android:id="@+id/textViewTweetContent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -58,19 +53,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageViewRepliesToReply"
+            android:id="@+id/imageViewReplies"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewReplyTweetContent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
             app:layout_constraintVertical_bias="0.05"
             app:srcCompat="@drawable/ic_comment" />
 
         <TextView
-            android:id="@+id/textViewReplyToReplyCounter"
+            android:id="@+id/textViewReplyCounter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -78,24 +73,24 @@
             android:text="@string/txt_replies"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageViewRepliesToReply"
-            app:layout_constraintTop_toBottomOf="@+id/textViewReplyTweetContent"
+            app:layout_constraintStart_toEndOf="@+id/imageViewReplies"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
             app:layout_constraintVertical_bias="0.07" />
 
         <ImageView
-            android:id="@+id/imageViewReplyLike"
+            android:id="@+id/imageViewLike"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageViewReplyShare"
-            app:layout_constraintStart_toEndOf="@+id/imageViewRepliesToReply"
-            app:layout_constraintTop_toBottomOf="@+id/textViewReplyTweetContent"
+            app:layout_constraintEnd_toStartOf="@+id/imageViewShare"
+            app:layout_constraintStart_toEndOf="@+id/imageViewReplies"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
             app:layout_constraintVertical_bias="0.05"
             app:srcCompat="@drawable/ic_like" />
 
         <TextView
-            android:id="@+id/textViewReplyLikeCounter"
+            android:id="@+id/textViewLikeCounter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -103,21 +98,28 @@
             android:text="@string/txt_like"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageViewReplyLike"
-            app:layout_constraintTop_toBottomOf="@+id/textViewReplyTweetContent"
+            app:layout_constraintStart_toEndOf="@+id/imageViewLike"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
             app:layout_constraintVertical_bias="0.07" />
 
         <ImageView
-            android:id="@+id/imageViewReplyShare"
+            android:id="@+id/imageViewShare"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewReplyTweetContent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTweetContent"
             app:layout_constraintVertical_bias="0.05"
             app:srcCompat="@drawable/ic_share" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/replyTweetsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="15dp" />
+
+</LinearLayout>
