--- a/app/src/main/res/layout/tweer_reply_layout.xml
+++ b/app/src/main/res/layout/tweer_reply_layout.xml
@@ -49,7 +49,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             android:text="bvzkjvhzhkjbhkxjkhlgsglgslgjgklhlhdgkdjgdgjdg;djgdflgjdgldjgkdlgjdgkljdglkdjgdlkjdgldgjdgjdgdjgl"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +118,30 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewReplyTweetContent"
             app:layout_constraintVertical_bias="0.05"
             app:srcCompat="@drawable/ic_share" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:text="@string/reply_text"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/textViewReplyTweetContent"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/textViewReplierUsername" />
+
+        <TextView
+            android:id="@+id/textViewReplyingUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="TextView"
+            android:textColor="@color/design_default_color_primary"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textViewReplyTweetContent"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textViewReplierUsername" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
